package com.clinic.management.model.util;

public enum DoctorSpecialization {
    OTOLARYNGOLOGIST,
    OPHTHALMOLOGIST,
    NEUROLOGIST,
    PSYCHOLOGIST
}
