@startuml
class Doctor {
    - DoctorSpecialization specialization
}

class DoctorRequest {
    - String firstName
    - String lastName
    - String pesel
    - DoctorSpecialization specialization
    - String address
}

class DoctorSummaryResponse {
    - Long id
    - String firstName
    - String lastName
    - DoctorSpecialization specialization
}

class DoctorService {
    + long addDoctor(DoctorRequest request)
    + List<DoctorSummaryResponse> getAllDoctors()
    + DoctorSummaryResponse getDoctor(long doctorID)
    + Doctor getDoctorEntity(long doctorID)
    + List<DoctorSummaryResponse>  getAllAvailableDoctors(LocalDateTime from, LocalDateTime to)
    + void deleteDoctor(long doctorID)
}

class DoctorRepository {
    + boolean existsByPesel(String pesel)
    + List<Doctor> findAvailableDoctors(LocalDateTime fromDate, LocalDateTime toDate)
    + void save(Doctor doctor)
    + Optional<Doctor> findById(Long id)
    + List<Doctor> findAll()
    + void deleteById(Long id)
}

class DoctorController {
    + long addDoctor(DoctorRequest doctorRequest)
    + List<DoctorSummaryResponse> getDoctors()
    + DoctorSummaryResponse getDoctor(long id)
    + ResponseEntity<Void> deleteDoctor(long id)
    +List<DoctorSummaryResponse> getAllAvailableDoctorsFromTo(LocalDateTime from, LocalDateTime to)
}

enum DoctorSpecialization {
    OTOLARYNGOLOGIST
    OPHTHALMOLOGIST
    NEUROLOGIST
    PSYCHOLOGIST
}

class DutyManagementService {
    + long addDuty(DutyRequest request)
    + void deleteExamRoom(long roomID)
    + void deleteDoctor(long doctorID)
}

abstract class Person {
    - Long id
    - String firstName
    - String lastName
    - String pesel
    - String address
}

Person <|-- Doctor
Doctor *- DoctorSpecialization
DoctorRequest ..> DoctorSpecialization
DoctorSummaryResponse ..> DoctorSpecialization
DoctorService ..> DoctorRequest
DoctorService ..> DoctorSummaryResponse
DoctorService --> DoctorRepository
DoctorController --> DoctorService
DoctorController ..> DoctorRequest
DoctorController ..> DoctorSummaryResponse
DoctorController --> DutyManagementService
DoctorRepository ..> Doctor
@enduml